--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <div id="swagger-ui"></div>
 <script src="dist/swagger-ui-bundle.js"> </script>
 <script src="dist/swagger-ui-standalone-preset.js"> </script>    
-    <script src="./swagger-initializer.js" charset="UTF-8"> </script>
+    <script src="dist/swagger-initializer.js" charset="UTF-8"> </script>
   </body>
 </html>
